--- a/style.css
+++ b/style.css
@@ -26,15 +26,17 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
+
 body * {
   font-family: "inter" sans-serif;
   color: var(--text-color);
 }
 
 #container {
-  width: 360px;
-  height: 712px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -57,9 +59,7 @@ body * {
 #switch {
   position: relative;
   width: 64px;
-
   margin: 4px auto;
-  
 }
 
 #switch button {
@@ -74,11 +74,15 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.2s;
 }
 
-.light #switch button{
-  right: 0;
-  left: initial;
+.light #switch button {
+  animation: slide-in 0.2s forwards;
+}
+#switch button:hover {
+outline: 8px solid var(--highlight-color);
+
 }
 
 #switch span {
@@ -146,4 +150,22 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0%;
+  }
 }
